<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="@mipmap/text_launcher_foreground"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/Lemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_marginTop="200sp"
        />

    <EditText
        android:id="@+id/Lpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/Lbtn"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:text="@string/Login"
        android:textColor="#111"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>